kubectl/app-namespace.yaml
# Неймспейсы (namespaces) в Kubernetes используются для разделения ресурсов внутри кластера на логические группы. Это позволяет организовать и управлять ресурсами более эффективно. 
# Вот несколько ключевых причин, для чего используются неймспейсы:

# Изоляция ресурсов: 
# Неймспейсы позволяют изолировать ресурсы различных проектов или команд друг от друга. 
# Это помогает избежать конфликтов имен и обеспечивает безопасность.

# Управление доступом: 
# С помощью неймспейсов можно настроить различные уровни доступа для разных пользователей или групп. 
# Это позволяет ограничить доступ к определенным ресурсам только для авторизованных пользователей.

# Управление ресурсами: 
# Неймспейсы позволяют ограничивать использование ресурсов (CPU, память) для различных проектов или команд.
# Это помогает предотвратить ситуацию, когда один проект использует все доступные ресурсы кластера, а другому их их не хватает.

# Упрощение управления: 
# Неймспейсы помогают организовать ресурсы в кластере, делая их управление более удобным и структурированным. 
# Это особенно полезно в больших кластерах с множеством ресурсов.

# Разделение окружений: 
# Неймспейсы можно использовать для разделения различных окружений (например, develop, test, prod) внутри одного кластера.



apiVersion: v1
kind: Namespace
metadata: 
  name: my-namespace


# kubectl get namespaces
# kubectl get pods -n my-namespace

# kubectl config set-context --current --namespace=my-namespace
