kubectl/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: short-api-deployment
spec:
  replicas: 1
  selector:  
    matchLabels:
      components: backend
  template: 
    metadata:
      labels: #нужны для связи пода с Service (у нас будет NodePort)
        components: backend
    spec: 
      containers:
        - name: short-app
          image: antonlarichev/short-api:v1.0
          ports: # указываем порты, которые должны быть прокинуты из контейнера в под
            - containerPort: 3000 
          resources: # допустимые лимиты на контейнер
            limits:
              memory: "500Mi" # даем контейнеру не более 128 МБ
              cpu: "200m" # даем что контейнеру не более половины процессора
          volumeMounts:
            - name: test
              mountPath: /etc/test
              readOnly: true
          livenessProbe: # работает на протяжении всей жизни контейнера
            exec: 
              command: # успешно выполненные команды имеют код 0 (проверить с помощью echo $?), неуспешные > 0
                - curl
                - --fail # с --fail если статус код >= 400, то код команды будет 1
                - http://localhost:3000/api # в идеале должен быть вообще отдельный эндпоинт для healthcheck-а
            initialDelaySeconds: 120 # Столько ждем пока приложение инициализируется
            periodSeconds: 5 # Далее каждый 5 секунду делаем curl
            failureThreshold: 1 # Количество допустимых ошибок подряд, перед тем как мы скажем, что контейнер не работает
          startupProbe: # Обеспечивает старт приложения (в течение 50 сек пытаемся проверить, что приложение стартануло) - после этого запускается livenessProbe
            exec: 
              command: 
                - curl
                - --fail 
                - http://localhost:3000/api
            periodSeconds: 12 
            failureThreshold: 10 
          readinessProbe: # проверяет готов ли контейнер
            exec: 
              command: 
                - curl
                - --fail 
                - http://localhost:3000/api
            periodSeconds: 12
            failureThreshold: 10 
      volumes:
        - name: test
          configMap:
            name: demo-config
