kubectl/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: postgres
  template:
    metadata:
      labels:
        components: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.0
          ports:
            - containerPort: 5432
          env: # задаем переменные окружения, которые требуются контейнеру постгри
            - name: POSTGRES_DB
              valueFrom: 
                secretKeyRef: #указываем, что будем брать из секретов
                  name: postgres-secret
                  key: POSTGRES_DB
            - name: POSTGRES_USER
              valueFrom: 
                secretKeyRef: #указываем, что будем брать из секретов
                  name: postgres-secret
                  key: POSTGRES_USER
            - name: POSTGRES_PASSWORD
              valueFrom: 
                secretKeyRef: #указываем, что будем брать из секретов
                  name: postgres-secret
                  key: POSTGRES_PASSWORD
          resources:
            limits:
              memory: "500Mi"
              cpu: "300m"
          volumeMounts: # Определяем что должно быть в volume
            - name: postgres-data # Должно соответствовать названию созданного volume
              mountPath: /var/lib/postgresql/data # Где хранятся данные в контейнере
              subPath: postgres # Говорит в какую подпапку внутри нашего volume разместить данные
      volumes: # Описываем volume для постгри
        - name: postgres-data
          persistentVolumeClaim: 
            claimName: postgres-pvc # Связываем volume с PVC
