kubectl/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: short-api-clusterip
spec: 
  type: ClusterIP
  ports: 
    - port: 3000 # Если без targetPort, то targetPort = port
      protocol: TCP
  selector: 
    components: backend
