kubectl/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
spec: 
  type: ClusterIP
  ports: 
    - port: 5432 # Если без targetPort, то targetPort = port
      protocol: TCP
  selector: 
    components: postgres
